tests/ui/attributes/should-panic.stderr
error: `#[should_panic]` should only be applied to functions annotated with `#[test]` or `#[bench]`
  --> $DIR/should-panic.rs:3:1
   |
LL | #[should_panic]
   | ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

